Prevent text overflow in vision language demo button; updated CONTRIBUTORS

--- a/app/assets/stylesheets/computer_vision/language_demo.scss
+++ b/app/assets/stylesheets/computer_vision/language_demo.scss
@@ -171,6 +171,11 @@ a:hover, a:focus {
     height: 85px;
     padding: 1px 15px;
     margin-bottom: 15px;
+
+    button {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .iconic-taxa-selectors {
